Grace/tests/gibbs/errors/t010.grace
// ERROR = P1018
var num := //123
